# linky

./: .gitignore  CMakeLists.txt  LICENSE  README.md
certs/: generate_certs.sh  intermediate.cnf.in  root.cnf.in  trust_certs.sh
src/: allocator.c  allocator.h  config.c  config.h  database.c  database.h  hashtable.c  hashtable.h  linky.c  listener.c  listener.h  logging.c  logging.h
